--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,10 @@
     "prettier"
   ],
   "rules": {
-    "react/react-in-jsx-scope": "off"
+    "react/react-in-jsx-scope": "off",
+    "import/prefer-default-export": "off",
+    "react/require-default-props": "off",
+    "react/jsx-props-no-spreading": "off",
+    "react/button-has-type": "off"
   }
 }
