--- a/package.json
+++ b/package.json
@@ -13,16 +13,21 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@types/chroma-js": "^2.1.4",
+    "chroma-js": "^2.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1"
+    "react-hook-form": "^7.38.0",
+    "react-scripts": "5.0.1",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
-    "typescript": "^4.8.4",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.68",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "@types/styled-components": "^5.1.26",
+    "babel-plugin-styled-components": "^2.0.7",
     "eslint": "^8.23.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
@@ -32,8 +37,9 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "^8.0.0",
     "prettier": "^2.7.1",
-    "husky": "^8.0.0"
+    "typescript": "^4.8.4"
   },
   "eslintConfig": {
     "extends": [
