--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@fontsource/public-sans": "^4.5.11",
     "@types/chroma-js": "^2.1.4",
     "chroma-js": "^2.4.2",
+    "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.38.0",
+    "react-imask": "^6.4.3",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6"
   },
