--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chroma-js": "^2.4.2",
     "classnames": "^2.3.2",
     "react": "^18.2.0",
+    "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.38.0",
     "react-imask": "^6.4.3",
