--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,7 @@
     "prettier"
   ],
   "rules": {
+    "react/no-unstable-nested-components": "off",
     "react/no-array-index-key": "off",
     "react/react-in-jsx-scope": "off",
     "import/prefer-default-export": "off",
