--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-input-mask": "^3.0.0-alpha.2",
     "react-modal": "^3.16.1",
     "react-scripts": "5.0.1",
+    "react-tiny-popover": "^7.2.0",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
