--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@fontsource/public-sans": "^4.5.11",
+    "@mui/material": "^5.10.15",
     "@types/chroma-js": "^2.1.4",
     "@types/react-modal": "^3.13.1",
     "chroma-js": "^2.4.2",
