--- a/package.json
+++ b/package.json
@@ -20,16 +20,14 @@
     "@types/chroma-js": "^2.1.4",
     "@types/react-modal": "^3.13.1",
     "chroma-js": "^2.4.2",
-    "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.38.0",
     "react-input-mask": "^3.0.0-alpha.2",
     "react-modal": "^3.16.1",
     "react-scripts": "5.0.1",
     "react-tiny-popover": "^7.2.0",
-    "styled-components": "^5.3.6"
+    "tss-react": "^4.4.4"
   },
   "devDependencies": {
     "@types/jest": "^27.5.2",
@@ -37,8 +35,6 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "@types/react-input-mask": "^3.0.2",
-    "@types/styled-components": "^5.1.26",
-    "babel-plugin-styled-components": "^2.0.7",
     "eslint": "^8.23.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
